Added hero header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel landing</title>
+    <title>New York landing</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>My travel landing</h1>
+    <header>
+      <h3>.TRAVEL.</h3>
+      <h1>New York</h1>
+      <p>The ultimate New York city travel guide</p>
+      <button>Learn more</button>
+    </header>
     <script src="js/script.js"></script>
   </body>
 </html>
