--- a/index.html
+++ b/index.html
@@ -4,16 +4,309 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New York landing</title>
+    <title>New York travel guide</title>
+    <meta
+      name="description"
+      content="New York - The ultimate New York city travel guide"
+    />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <h3>.TRAVEL.</h3>
       <h1>New York</h1>
       <p>The ultimate New York city travel guide</p>
-      <button>Learn more</button>
+      <a href="#more">Learn more</a>
     </header>
+    <main>
+      <section class="grid grid-2-columns">
+        <div>
+          <img
+            src="images/new-york-1.webp"
+            alt="New York Building"
+            class="img-responsive"
+          />
+        </div>
+
+        <div>
+          <a name="more"></a>
+          <h2>Why New York?</h2>
+          <h3>The city that never sleeps</h3>
+          <p>
+            There is so much to see in New York City! Its bustling streets are a
+            whirlwind of activity, and there are world-famous sites around every
+            corner. From the iconic landmarks like the Brooklyn Bridge to the
+            city’s incredible food scene and the fascinating museums, you could
+            spend months exploring NYC. Here’s my ultimate New York travel guide
+            to help you plan an unforgettable trip!
+          </p>
+        </div>
+      </section>
+      <section class="secondary">
+        <h2 class="text-center">Hotels</h2>
+        <h3 class="text-center">Best Hotels in New York</h3>
+
+        <div class="grid grid-3-columns">
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="/images/hotel-plaza.webp"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+
+            <div class="card-body">
+              <h4>The Plaza</h4>
+              <p>
+                If money is no object and you've always dreamed of sleeping in a
+                castle, this is the hotel for you. It was built to resemble a
+                French château and sits across the street from the southern edge
+                of Central Park. A favorite of filmmakers, The Plaza is where
+                Robert Redford and Barbra Streisand filmed "The Way We Were" and
+                where Macaulay Culkin spent Christmas in "Home Alone 2."
+              </p>
+              <h5>Address:</h5>
+              <p>768 5th Ave., New York, 10019</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.8812793652196!2d-73.97651378520806!3d40.7646358423319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f088ea752b%3A0x255f61d7b0e5f3ea!2s768%205th%20Ave%2C%20New%20York%2C%20NY%2010019%2C%20EE.%20UU.!5e0!3m2!1ses!2ses!4v1669907762845!5m2!1ses!2ses"
+                class="embed"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div class="card-footer">
+              <a href="https://www.theplazany.com/" class="btn" target="_blank">
+                Book now
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="/images/hotel-ritz.webp"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+
+            <div class="card-body">
+              <h4>The Ritz-Carlton</h4>
+              <p>
+                The Ritz-Carlton is one of Central Park's most luxurious hotels.
+                The high-end property is located steps from some of the best
+                shopping in the world and the southern edge of Central Park. It
+                has great location. Rooms are plush and personal touches abound.
+                This is a place to be pampered. Come for a spa day, stay for
+                afternoon tea, and while away the hours in between at Bergdorf
+                Goodman a few blocks away.
+              </p>
+              <h5>Address:</h5>
+              <p>50 Central Park South, New York, 10019</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.849687489612!2d-73.9782815852081!3d40.76533064228919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f0c7367c49%3A0xede178d8a30cc8a3!2s50%20Central%20Park%20S%2C%20New%20York%2C%20NY%2010019%2C%20EE.%20UU.!5e0!3m2!1ses!2ses!4v1669907899985!5m2!1ses!2ses"
+                class="embed"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div class="card-footer">
+              <a
+                href="https://www.ritzcarlton.com/en/hotels/new-york/central-park"
+                class="btn"
+                target="_blank"
+              >
+                Book now
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="/images/hotel-penninsula.webp"
+                alt="Hem Cafe"
+                class="img-responsive"
+              />
+            </div>
+
+            <div class="card-body">
+              <h4>The Peninsula</h4>
+              <p>
+                After being closed for 14 months during the COVID-19 pandemic,
+                The Peninsula New York reopened in summer 2021 and welcomed
+                guests back to this iconic address on Fifth Avenue, near
+                high-end stores and popular attractions such as Rockefeller
+                Center and Radio City Music Hall. The hotel's spa is one of the
+                largest in the city, spanning three floors, and the top-floor
+                indoor pool offers sweeping views of the skyline.
+              </p>
+              <h5>Address:</h5>
+              <p>700 5th Ave., New York, 10019</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.0168038329125!2d-73.97759058520818!3d40.761655142514314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258fa4c107b09%3A0xc81a89223f9ecd02!2s700%205th%20Ave%2C%20New%20York%2C%20NY%2010019%2C%20EE.%20UU.!5e0!3m2!1ses!2ses!4v1669908070680!5m2!1ses!2ses"
+                class="embed"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div class="card-footer">
+              <a
+                href="https://www.peninsula.com/en/new-york/5-star-luxury-hotel-midtown-nyc"
+                class="btn"
+                target="_blank"
+              >
+                Book now
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2 class="text-center">Gallery</h2>
+        <h3 class="text-center">My photos from New York</h3>
+        <div class="instagram-embeds">
+          <div class="grid grid-3-columns">
+            <iframe
+              class="instagram-media instagram-media-rendered"
+              id="instagram-embed-0"
+              src="https://www.instagram.com/p/CjTswhOtNoD/embed/?cr=1&amp;v=14&amp;wp=355&amp;rd=https%3A%2F%2Fwww.travel.shecodes.io&amp;rp=%2F#%7B%22ci%22%3A0%2C%22os%22%3A1527.9000000059605%2C%22ls%22%3A1136.2000000178814%2C%22le%22%3A1495.1000000238419%7D"
+              allowtransparency="true"
+              allowfullscreen="true"
+              frameborder="0"
+              height="651"
+              data-instgrm-payload-id="instagram-media-payload-0"
+              scrolling="no"
+              style="
+                background: white;
+                max-width: 540px;
+                width: calc(100% - 2px);
+                border-radius: 3px;
+                border: 1px solid rgb(219, 219, 219);
+                box-shadow: none;
+                display: block;
+                margin: 0px 0px 12px;
+                min-width: 326px;
+                padding: 0px;
+              "
+            ></iframe>
+            <iframe
+              class="instagram-media instagram-media-rendered"
+              id="instagram-embed-1"
+              src="https://www.instagram.com/p/CjVXqB5M_Y-/embed/?cr=1&amp;v=14&amp;wp=355&amp;rd=https%3A%2F%2Fwww.travel.shecodes.io&amp;rp=%2F#%7B%22ci%22%3A1%2C%22os%22%3A1534%2C%22ls%22%3A1136.2000000178814%2C%22le%22%3A1495.1000000238419%7D"
+              allowtransparency="true"
+              allowfullscreen="true"
+              frameborder="0"
+              height="651"
+              data-instgrm-payload-id="instagram-media-payload-1"
+              scrolling="no"
+              style="
+                background: white;
+                max-width: 540px;
+                width: calc(100% - 2px);
+                border-radius: 3px;
+                border: 1px solid rgb(219, 219, 219);
+                box-shadow: none;
+                display: block;
+                margin: 0px 0px 12px;
+                min-width: 326px;
+                padding: 0px;
+              "
+            ></iframe>
+            <iframe
+              class="instagram-media instagram-media-rendered"
+              id="instagram-embed-2"
+              src="https://www.instagram.com/p/CjX3v5JMPOv/embed/?cr=1&amp;v=14&amp;wp=355&amp;rd=https%3A%2F%2Fwww.travel.shecodes.io&amp;rp=%2F#%7B%22ci%22%3A2%2C%22os%22%3A1540.9000000059605%2C%22ls%22%3A1136.2000000178814%2C%22le%22%3A1495.1000000238419%7D"
+              allowtransparency="true"
+              allowfullscreen="true"
+              frameborder="0"
+              height="651"
+              data-instgrm-payload-id="instagram-media-payload-2"
+              scrolling="no"
+              style="
+                background: white;
+                max-width: 540px;
+                width: calc(100% - 2px);
+                border-radius: 3px;
+                border: 1px solid rgb(219, 219, 219);
+                box-shadow: none;
+                display: block;
+                margin: 0px 0px 12px;
+                min-width: 326px;
+                padding: 0px;
+              "
+            ></iframe>
+            <script async="" src="//www.instagram.com/embed.js"></script>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <section class="grid grid-3-columns-with-first-narrow">
+        <div>
+          <h3>More about New York</h3>
+
+          <ul>
+            <li>
+              <a
+                href="https://www.aeroportolisboa.pt/en/lis/home"
+                target="_blank"
+              >
+                New York Airport website
+              </a>
+            </li>
+            <li>
+              <a href="https://goo.gl/maps/8ZwWBBJVZduUNuXNA" target="_blank">
+                Map of New York
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.metrolisboa.pt/en/travel/diagrams-and-maps/"
+                target="_blank"
+              >
+                Public transport map
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Marta and I've been living in New York for several
+            years. I'm very fond of the city. I created this page as part of a
+            project for SheCodes Responsive to develop my coding skills.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
+            <br />
+            This project was coded by Matt Delac and is
+            <a
+              href="https://github.com/matthieua/New York-travel-project"
+              target="_blank"
+            >
+              open sourced</a
+            >
+          </p>
+        </div>
+      </section>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
